--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>내 GitHub Pages 테스트</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>RPA 도입을 통한 업무 능률 향상 방안</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <h1>안녕하세요! GitHub Pages입니다.</h1>
-    <p>이 페이지는 GitHub에서 호스팅 중입니다.</p>
+  <header>
+    <h1>RPA 도입을 통한 업무 능률 향상 방안</h1>
+    <p>2025년 1학기 캡스톤 디자인</p>
+  </header>
+
+  <section>
+    <h2>1. RPA란 무엇이며, 왜 필요한가?</h2>
+    <p>RPA(Robotic Process Automation)는 사람이 수행하던 단순 작업을 소프트웨어를 통해 자동화하는 기술입니다.  
+    예시: 엑셀 작업, 반복 입력 등  
+    핵심어: 자동화 / 단순 업무 대체 :contentReference[oaicite:0]{index=0}:contentReference[oaicite:1]{index=1}</p>
+  </section>
+
+  <section>
+    <h2>2. 현상황</h2>
+    <p>전기 엔지니어링 회사 재직 중 출장 업무가 많아 법인카드 결제 후 영수증 정리를 매번 수작업으로 엑셀에 입력 → 시간 소모, 반복 수동 작업, 업무 효율 저하</p>
+  </section>
+
+  <section>
+    <h2>3. 자동화 시스템 개요</h2>
+    <ol>
+      <li>영수증 이미지를 공유폴더에 업로드</li>
+      <li>OCR로 텍스트 추출</li>
+      <li>ChatGPT로 카드번호, 승인일자, 가맹점명, 이용금액 등 구조화</li>
+      <li>엑셀파일에 자동 기록</li>
+      <li>처리된 이미지를 ‘done’ 폴더로 이동</li>
+    </ol>
+  </section>
+
+  <section>
+    <h2>4. 목표</h2>
+    <ul>
+      <li>시간절약: 자동화로 처리시간 단축</li>
+      <li>정확성 향상: OCR+ChatGPT로 수동 입력 오류 감소</li>
+      <li>효율성 증가: 부서 업무 부담 경감</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>5. 현재 개발상황 및 향후 계획</h2>
+    <p><strong>현재 상태</strong><br>
+      • ChatGPT, Naver Clova OCR 키 발급 후 PyQt5로 간단 UI 디자인 완료<br>
+      • 폴더 경로 지정 및 필요한 정보만 추출 가공 완료 :contentReference[oaicite:2]{index=2}:contentReference[oaicite:3]{index=3}</p>
+    <p><strong>향후 계획</strong><br>
+      • 영수증 용도(교통비, 숙박비, 유류비, 식대 등) 구분 후 시트1 연동<br>
+      • 시트2에 영수증 이미지 자동 첨부</p>
+  </section>
+
+  <footer>
+    <p>감사합니다.</p>
+  </footer>
 </body>
 </html>
