--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>1. RPA란 무엇이며, 왜 필요한가?</h2>
     <p>RPA(Robotic Process Automation)는 사람이 수행하던 단순 작업을 소프트웨어를 통해 자동화하는 기술입니다.  
     예시: 엑셀 작업, 반복 입력 등  
-    핵심어: 자동화 / 단순 업무 대체 :contentReference[oaicite:0]{index=0}:contentReference[oaicite:1]{index=1}</p>
+    핵심어: 자동화 / 단순 업무 대체</p>
   </section>
 
   <section>
@@ -48,7 +48,7 @@
     <h2>5. 현재 개발상황 및 향후 계획</h2>
     <p><strong>현재 상태</strong><br>
       • ChatGPT, Naver Clova OCR 키 발급 후 PyQt5로 간단 UI 디자인 완료<br>
-      • 폴더 경로 지정 및 필요한 정보만 추출 가공 완료 :contentReference[oaicite:2]{index=2}:contentReference[oaicite:3]{index=3}</p>
+      • 폴더 경로 지정 및 필요한 정보만 추출 가공 완료 </p>
     <p><strong>향후 계획</strong><br>
       • 영수증 용도(교통비, 숙박비, 유류비, 식대 등) 구분 후 시트1 연동<br>
       • 시트2에 영수증 이미지 자동 첨부</p>
