--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
       • 시트2에 영수증 이미지 자동 첨부</p>
   </section>
 
+  <a href="https://www.youtube.com/watch?v=EswVjHZMn74">mcp 서버</a>
+  <a href="abc.jpg" download="abc.jpg">
+    ⬇️ abc.jpg 다운로드
+  </a>
+  
   <footer>
     <p>감사합니다.</p>
   </footer>
