--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
   </p>
 
   <p>
-    <a href="abc.jpg" download="abc.jpg">
-      ⬇️ abc.jpg 다운로드
-    </a>
+    <a href="abc.jpg" download="abc.jpg">포스터</a>
+  </p>
+  <p>
+    <a href="abc.jpg" download="abc.jpg">최종발표 PPT</a>
   </p>
   
   <footer>
