--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   </header>
 
   <section>
-    <h2>1. RPA란 무엇이며, 왜 필요한가?</h2>
+    <h2>📌 RPA란 무엇이며, 왜 필요한가?</h2>
     <p>RPA(Robotic Process Automation)는 사람이 수행하던 단순 작업을 소프트웨어를 통해 자동화하는 기술입니다.  
     예시: 엑셀 작업, 반복 입력 등  
     핵심어: 자동화 / 단순 업무 대체</p>
   </section>
 
   <section>
-    <h2>2. 현상황</h2>
+    <h2>📌 현상황</h2>
     <p>전기 엔지니어링 회사 재직 중 출장 업무가 많아 법인카드 결제 후 영수증 정리를 매번 수작업으로 엑셀에 입력 → 시간 소모, 반복 수동 작업, 업무 효율 저하</p>
   </section>
 
   <section>
-    <h2>3. 자동화 시스템 개요</h2>
+    <h2>📌 자동화 시스템 개요</h2>
     <ol>
       <li>영수증 이미지를 공유폴더에 업로드</li>
       <li>OCR로 텍스트 추출</li>
@@ -36,7 +36,7 @@
   </section>
 
   <section>
-    <h2>4. 목표</h2>
+    <h2>📌 목표</h2>
     <ul>
       <li>시간절약: 자동화로 처리시간 단축</li>
       <li>정확성 향상: OCR+ChatGPT로 수동 입력 오류 감소</li>
@@ -45,7 +45,7 @@
   </section>
 
   <section>
-    <h2>5. 현재 개발상황 및 향후 계획</h2>
+    <h2>📌 현재 개발상황 및 향후 계획</h2>
     <p><strong>현재 상태</strong><br>
       • ChatGPT, Naver Clova OCR 키 발급 후 PyQt5로 간단 UI 디자인 완료<br>
       • 폴더 경로 지정 및 필요한 정보만 추출 가공 완료 </p>
