--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
+  <nav class="navbar">
+    <ul class="menu">
+      <li><a href="#intro">프로젝트 소개</a></li>
+      <li><a href="#how-to-use">이용방법</a></li>
+      <li><a href="#why">필요성</a></li>
+      <li><a href="#architecture">시스템 구조</a></li>
+      <li><a href="#tech-stack">기술스택</a></li>
+      <li><a href="#presentation">소개 및 발표자료</a></li>
+    </ul>
+  </nav>
+  
   <header>
     <h1>RPA 도입을 통한 업무 능률 향상 방안</h1>
     <p>2025년 1학기 캡스톤 디자인</p>
