--- a/index.html
+++ b/index.html
@@ -11,32 +11,31 @@
   <nav class="navbar">
     <ul class="menu">
       <li><a href="#intro">프로젝트 소개</a></li>
-      <li><a href="#how-to-use">이용방법</a></li>
       <li><a href="#why">필요성</a></li>
+      <li><a href="#outline">자동화 시스템 개요</a></li>
       <li><a href="#architecture">시스템 구조</a></li>
       <li><a href="#tech-stack">기술스택</a></li>
+      <li><a href="#how-to-use">이용방법</a></li>
       <li><a href="#presentation">소개 및 발표자료</a></li>
     </ul>
   </nav>
   
-  <header>
-    <h1>RPA 도입을 통한 업무 능률 향상 방안</h1>
-    <p>2025년 1학기 캡스톤 디자인</p>
-  </header>
-
-  <section>
-    <h2>📌 RPA란 무엇이며, 왜 필요한가?</h2>
-    <p>RPA(Robotic Process Automation)는 사람이 수행하던 단순 작업을 소프트웨어를 통해 자동화하는 기술입니다.  
-    예시: 엑셀 작업, 반복 입력 등  
-    핵심어: 자동화 / 단순 업무 대체</p>
+  <section id="intro">
+    <h2>📌 프로젝트 소개</h1>
+    <h3>"RPA를 활용환 자동화 영수증 정리 프로그램"</h3>
+    <p>사람이 수행하던 단순작업을 소프트웨어를 통해 자동화하는 기술</p>
   </section>
 
-  <section>
-    <h2>📌 현상황</h2>
-    <p>전기 엔지니어링 회사 재직 중 출장 업무가 많아 법인카드 결제 후 영수증 정리를 매번 수작업으로 엑셀에 입력 → 시간 소모, 반복 수동 작업, 업무 효율 저하</p>
+  <section id="why">
+    <h2>📌 필요성</h2>
+    <ol>
+      <li>시간절약: 자동화로 처리시간 단축</li>
+      <li>정확성 향상: OCR+ChatGPT로 수동 입력 오류 감소</li>
+      <li>효율성 증가: 부서 업무 부담 경감</li>
+    </ol>
   </section>
 
-  <section>
+  <section id="outline">
     <h2>📌 자동화 시스템 개요</h2>
     <ol>
       <li>영수증 이미지를 공유폴더에 업로드</li>
@@ -47,35 +46,62 @@
     </ol>
   </section>
 
-  <section>
-    <h2>📌 목표</h2>
+  <section id="architecture">
+    <h2>📌 시스템 구조</h2>
+    <img src="program_structure.jpg" alt="시스템 구조 다이어그램" style="width:100%; height:auto; display:block; margin-top:1rem;">
+  </section>
+
+  <section id="tech-stack">
+    <h2>📌 기술스택</h2>
     <ul>
-      <li>시간절약: 자동화로 처리시간 단축</li>
-      <li>정확성 향상: OCR+ChatGPT로 수동 입력 오류 감소</li>
-      <li>효율성 증가: 부서 업무 부담 경감</li>
+      <li><strong>Python Version:</strong> Python 3.11</li>
+      <li><strong>UI Framework:</strong> PyQt5 (Windows 응용프로그램)</li>
+      <li><strong>AI Integration:</strong> OpenAI ChatGPT API</li>
+      <li><strong>OCR Service:</strong> Naver Cloud Platform Clova OCR</li>
     </ul>
   </section>
 
-  <section>
-    <h2>📌 현재 개발상황 및 향후 계획</h2>
-    <p><strong>현재 상태</strong><br>
-      • ChatGPT, Naver Clova OCR 키 발급 후 PyQt5로 간단 UI 디자인 완료<br>
-      • 폴더 경로 지정 및 필요한 정보만 추출 가공 완료 </p>
-    <p><strong>향후 계획</strong><br>
-      • 영수증 용도(교통비, 숙박비, 유류비, 식대 등) 구분 후 시트1 연동<br>
-      • 시트2에 영수증 이미지 자동 첨부</p>
-  </section>
+  <section id="how-to-use">
+  <h2>📌 이용방법</h2>
+  
+  <ol class="how-to-list">
+    <li>
+      <strong>실행 파일 다운로드</strong><br>
+      GitHub Releases 또는 제공된 링크에서 <code>receipt.exe</code> 파일을 내려받습니다.
+    </li>
+    <li>
+      <strong>폴더 구조 준비</strong><br>
+      같은 폴더(예: <code>C:\RPA_Receipt</code>)에<br>
+      - <code>receipt.exe</code><br>
+      - 처리할 영수증 이미지(예: <code>images/</code> 폴더)<br>
+      - 결과가 저장될 폴더(예: <code>output/</code>)를 위치시킵니다.
+    </li>
+    <li>
+      <strong>프로그램 실행</strong><br>
+      해당 폴더에서 터미널(또는 탐색기 더블클릭)으로 <code>receipt.exe</code>를 실행합니다.  
+      자동으로 OCR → ChatGPT 분석 → 엑셀 기록 과정을 수행합니다.
+    </li>
+    <li>
+      <strong>처리 결과 확인</strong><br>
+      처리된 엑셀 파일(<code>results.xlsx</code>)과<br>
+      완료된 영수증 이미지는 <code>output/</code> 폴더에 저장됩니다.
+    </li>
+    <li>
+      <strong>종료 및 로그 보기</strong><br>
+      프로그램이 자동 종료되면, 같은 폴더의 <code>logs/app.log</code>를 열어 처리 내역을 확인할 수 있습니다.
+    </li>
+  </ol>
+</section>
 
-  <p>
-    <a href="https://www.youtube.com/watch?v=EswVjHZMn74">mcp 서버</a>
-  </p>
-
+<section id="presentation">
+  <h2>📌 소개 및 발표자료</h2>
   <p>
     <a href="abc.jpg" download="abc.jpg">포스터</a>
   </p>
   <p>
     <a href="abc.jpg" download="abc.jpg">최종발표 PPT</a>
   </p>
+</section>
   
   <footer>
     <p>감사합니다.</p>
