--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul class="menu">
       <li><a href="#intro">프로젝트 소개</a></li>
       <li><a href="#why">필요성</a></li>
-      <li><a href="#outline">자동화 시스템 개요</a></li>
+      <li><a href="#outline">개요</a></li>
       <li><a href="#architecture">시스템 구조</a></li>
       <li><a href="#tech-stack">기술스택</a></li>
       <li><a href="#how-to-use">이용방법</a></li>
@@ -36,7 +36,7 @@
   </section>
 
   <section id="outline">
-    <h2>📌 자동화 시스템 개요</h2>
+    <h2>📌 개요</h2>
     <ol>
       <li>영수증 이미지를 공유폴더에 업로드</li>
       <li>OCR로 텍스트 추출</li>
