--- a/index.html
+++ b/index.html
@@ -95,12 +95,14 @@
 
 <section id="presentation">
   <h2>📌 소개 및 발표자료</h2>
-  <p>
-    <a href="abc.jpg" download="abc.jpg">포스터</a>
-  </p>
-  <p>
-    <a href="abc.jpg" download="abc.jpg">최종발표 PPT</a>
-  </p>
+  <div class="presentation-links">
+    <a href="abc.jpg" download="abc.jpg" class="download-btn">
+      📄 포스터 다운로드
+    </a>
+    <a href="xyz.pptx" download="xyz.pptx" class="download-btn">
+      🎤 최종발표 PPT 다운로드
+    </a>
+  </div>
 </section>
   
   <footer>
