--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </li>
     <li>
       <strong>프로그램 실행</strong><br>
-      해당 폴더에서 터미널(또는 탐색기 더블클릭)으로 <code>receipt.exe</code>를 실행합니다.  
+      해당 폴더에서 터미널(또는 탐색기 더블클릭)으로 <code>receipt.exe</code>를 실행합니다. <br>
       자동으로 OCR → ChatGPT 분석 → 엑셀 기록 과정을 수행합니다.
     </li>
     <li>
@@ -99,6 +99,7 @@
     <a href="abc.jpg" download="abc.jpg" class="download-btn">
       📄 포스터 다운로드
     </a>
+    <br>
     <a href="xyz.pptx" download="xyz.pptx" class="download-btn">
       🎤 최종발표 PPT 다운로드
     </a>
