--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 <section id="presentation">
   <h2>📌 소개 및 발표자료</h2>
   <div class="presentation-links">
-    <a href="abc.jpg" download="abc.jpg" class="download-btn">
+    <a href="poster.pdf" download="poster.pdf" class="download-btn">
       📄 포스터 다운로드
     </a>
-    <a href="xyz.pptx" download="xyz.pptx" class="download-btn">
+    <a href="final.pdf" download="final.pdf" class="download-btn">
       🎤 최종발표 PPT 다운로드
     </a>
   </div>
